# trusted-ai-cli

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TODOS.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-06-29T15-38-17-319Z.yml  page-2026-06-29T17-03-00-559Z.yml  page-2026-06-29T17-03-24-732Z.yml  page-2026-06-29T17-03-53-105Z.yml
docs/: REVIEW.md  architecture.md  changelog.html  changelog.md  contributing.md  index.html  matrix.md  prd.md
docs.old/: REVIEW.html  contributing.html  intent.html
docs.old/_assets/: style.css
docs.old/decisions/: 001-html-docs.html
docs.old/design/: system.html
docs.old/plan/: tasks.html
docs.old/specs/: _template.html
docs.old/trace/: concerns.html  how-auth.html  how-entrypoint.html  stack.html
docs/_assets/: docs.js
docs/decisions/: 0001-markdown-docs.md  0002-dashboard-web-stack.md  0003-review-loop-parallel.md  0004-plan-talk-first.md  0005-skill-pruning.md  0006-flow-split-plan-review.md  001-html-docs.html  _template.html  adr.template.md
docs/plan/: backlog.md  milestones.html  tasks.md  todos.html
docs/specs/: dashboard-render.md  dashboard-serve.md  dashboard-ui.md  docs-query.md  gates-action.md  gates-view.md  spec.template.md
docs/trace/: conventions.html  how-auth.html  how-config.html  how-gpu.html  how-hub.html  how-pdf.html  how-secrets.html  how-skills-hooks.html  matrix.html  overview.html  testing.html
tai/: __init__.py  docs.py  main.py
tai/commands/: agent.py  ai.py  api.py  auth.py  browser.py  claude.py  codex.py  config.py  dashboard.py  docs.py  gate.py  hub.py  meetings.py  pdf.py  project.py  sales.py  secret.py  setup.py  skills.py  style.py  tasks.py  update.py  vastai.py
tai/core/: agent.py  auth.py  browser_setup.py  config.py  context.py  errors.py  http.py  keystore.py  mermaid.py  project.py  prompt.py  skills.py  style.py  templates.py  typst.py  updater.py
tai/hooks/: __init__.py  hooks.json
tai/plugins/: README.md  __init__.py
tests/: conftest.py  test_auth_core.py  test_browser_setup.py  test_config.py  test_context.py  test_dashboard.py  test_dashboard_serve.py  test_dashboard_ui.py  test_docs_query.py  test_errors.py  test_gate_action.py  test_gates_view.py  test_http.py  test_keystore.py  test_main.py  test_pdf_cmd.py  test_project.py  test_prompt.py  test_sales.py  test_skills.py  test_templates.py  test_typst.py  test_updater.py  test_vastai_bootstrap.py  test_vastai_cli.py  test_vastai_offers.py  test_vastai_provision.py  test_vastai_ssh_config.py  test_vastai_state.py  test_vastai_sync.py
tests/commands/: test_ai_cmd.py  test_api_cmd.py  test_auth_cmd.py  test_browser_cmd.py  test_claude_cmd.py  test_codex_cmd.py  test_config_cmd.py  test_meetings_cmd.py  test_pdf_cmd.py  test_project_cmd.py  test_sales_cmd.py  test_secret_cmd.py  test_secret_cmd_extra.py  test_setup_cmd.py  test_style_cmd.py  (+2 more)
(+154 files in other folders)
