[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trusted-ai-cli"
version = "0.1.0"
description = "Internal CLI for TrustedAI company tools and APIs"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "keyring>=25.0",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "tomli-w>=1.2", # write TOML (tomllib only reads)
    "python-dotenv>=1.0",
    "questionary>=2.1.1",
    "inquirerpy>=0.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
]

[project.scripts]
tai = "tai.main:app"

[project.entry-points."tai.plugins"]
# third-party plugins register here:
# my-plugin = "tai_myplugin.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["tai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tai --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*"]
