[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trusted-ai-cli"
version = "0.3.0"
description = "Internal CLI for TrustedAI company tools and APIs"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "keyring>=25.0",
    "google-auth-oauthlib>=1.2",
    "google-auth>=2.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "rich>=13.7",
    "tomli-w>=1.2", # write TOML (tomllib only reads)
    "python-dotenv>=1.0",
    "inquirerpy>=0.3.4",
    "packaging>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "python-semantic-release>=9.0",
]

[project.scripts]
tai = "tai.main:cli"

[project.entry-points."tai.plugins"]
# third-party plugins register here:
# my-plugin = "tai_myplugin.commands:app"

[tool.hatch.build.targets.wheel]
packages = ["tai"]

[tool.hatch.build.targets.wheel.force-include]
"tai/hooks/hooks.json" = "tai/hooks/hooks.json"
"tai/hooks/scripts" = "tai/hooks/scripts"
"tai/hooks/lib" = "tai/hooks/lib"
"tai/data/templates" = "tai/data/templates"
"tai/data/brand" = "tai/data/brand"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tai --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
changelog_file = "CHANGELOG.md"
build_command = "pip install build && python -m build --wheel"
upload_to_vcs_release = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "chore", "docs", "test", "ci", "build"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
